--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ msgpack==1.1.2
 mysql-connector-python==9.5.0
 openpyxl==3.1.5
 packaging==26.0
-pillow==12.0.0
+pillow<11.0,>=9.2.0
 py-ubjson==0.16.1
 pyasn1==0.6.2
 pyasn1_modules==0.4.2
@@ -46,4 +46,5 @@ tzdata==2025.2
 ujson==5.11.0
 Unidecode==1.4.0
 zope.interface==8.2
+
 
