--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,34 @@
-﻿asgiref==3.11.0
-attrs==25.4.0
-autobahn==23.6.2
-Automat==25.4.16
-cbor2==5.8.0
-cffi==2.0.0
-channels==4.3.2
-click==8.3.1
-colorama==0.4.6
-constantly==23.10.4
-cryptography==46.0.4
-daphne==4.2.1
-diff-match-patch==20241021
-Django==5.2.8
+Django==5.0.2
+channels==4.0.0
+daphne==4.0.0
+asgiref==3.7.2
+sqlparse==0.5.3
+pymysql==1.1.0
+mysql-connector-python==9.0.0
+sqlite3-to-mysql==2.5.0
 django-import-export==4.4.0
 django-pwa==2.0.1
-et_xmlfile==2.0.0
-hyperlink==21.0.0
-idna==3.11
-Incremental==24.11.0
-msgpack==1.1.2
-mysql-connector-python==9.5.0
-openpyxl==3.1.5
-packaging==26.0
+
+# Compatibilidad
+autobahn==23.6.2
 pillow<11.0,>=9.2.0
-py-ubjson==0.16.1
-pyasn1==0.6.2
-pyasn1_modules==0.4.2
-pycparser==3.0
-pyOpenSSL==25.3.0
-python-dateutil==2.9.0.post0
-pytimeparse2==1.7.1
-service-identity==24.2.0
+
+# Dependencias de Channels/Twisted
+twisted==22.10.0
+attrs==23.1.0
+automat==22.10.0
+txaio==23.1.1
+zope.interface==6.0
+incremental==21.3.0
+hyperlink==21.0.0
+service-identity==21.1.0
+cryptography==41.0.7
+pyOpenSSL==23.2.0
+
+# Utilidades
+ujson==5.8.0
 simplejson==3.20.2
-six==1.17.0
-sqlglot==28.10.0
-sqlite3-to-mysql==2.5.5
-sqlparse==0.5.3
 tablib==3.9.0
 tabulate==0.9.0
-tqdm==4.67.3
-Twisted==25.5.0
-txaio==25.12.2
-typing_extensions==4.15.0
-tzdata==2025.2
-ujson==5.11.0
+tqdm==4.67.0
 Unidecode==1.4.0
-zope.interface==8.2
-
-
