--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,49 @@
-Django==5.0.2
-channels==4.0.0
-daphne==4.0.0
 asgiref==3.7.2
-sqlparse==0.5.3
-pymysql==1.1.0
-mysql-connector-python==9.0.0
-sqlite3-to-mysql==2.5.0
+attrs==23.1.0
+autobahn==23.6.2
+Automat==22.10.0
+cbor2==5.8.0
+cffi==1.15.1
+channels==4.0.0
+click==8.3.1
+colorama==0.4.6
+constantly==23.1.0
+cryptography==41.0.7
+daphne==4.0.0
+diff-match-patch==20241021
+Django==5.0.2
 django-import-export==4.4.0
 django-pwa==2.0.1
-
-# Compatibilidad
-autobahn==23.6.2
-pillow<11.0,>=9.2.0
-
-# Dependencias de Channels/Twisted
-twisted==22.10.0
-attrs==23.1.0
-automat==22.10.0
-txaio==23.1.1
-zope.interface==6.0
-incremental==21.3.0
+et_xmlfile==1.1.0
 hyperlink==21.0.0
-service-identity==21.1.0
-cryptography==41.0.7
+idna==3.4
+Incremental==21.3.0
+msgpack==1.0.7
+mysql-connector-python==9.0.0
+openpyxl==3.1.2
+packaging==23.2
+pillow<11.0,>=9.2.0
+py-ubjson==0.16.1
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.21
 pyOpenSSL==23.2.0
-
-# Utilidades
-ujson==5.8.0
-simplejson==3.20.2
-tablib==3.9.0
+python-dateutil==2.8.2
+pytimeparse2==1.7.1
+service-identity==21.1.0
+simplejson==3.19.1
+six==1.16.0
+sqlglot==23.1.0
+sqlite3-to-mysql==2.5.0
+sqlparse==0.5.3
+tablib==3.3.0
 tabulate==0.9.0
 tqdm==4.67.0
+Twisted==22.10.0
+txaio==23.1.1
+typing_extensions==4.10.0
+tzdata==2023.3
+ujson==5.8.0
 Unidecode==1.4.0
+zope.interface==6.0
+
